--- a/views/layout.haml
+++ b/views/layout.haml
@@ -4,7 +4,12 @@
     %link{:href => "/bootstrap/css/bootstrap.css", :media => "screen", :rel => "StyleSheet", :type => "text/css"}
     %link{:href => "http://fonts.googleapis.com/css?family=Flamenco", :rel => "stylesheet", :type => "text/css"}
     %link{:href => "/style/stajl.css", :media => "screen", :rel => "StyleSheet", :type => "text/css"}
-          
+    %script{:src => "bootstrap/js/jquery.min.js", :type => "text/javascript"}
+    %script{:src => "bootstrap/js/bootstrap.js", :type => "text/javascript"}
+    %script{:src => "https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"}
+    %script{:src => "/javascript.js", :type => "text/javascript"}
+
+
   %body
     .wrapper
       %h1
