--- a/public/style/stajl.css
+++ b/public/style/stajl.css
@@ -2,7 +2,7 @@
         
 body {
     	background-image: url(pikczers/widok.jpg);
-      background-color: #E4FCE2;
+      background-color: #ffffff;
           }
           
   .wrapper {
@@ -11,7 +11,7 @@ body {
           }
 h1 {
           	font-size: 70px;
-          	font-family: 'Flamenco';
+          	font-family: 'Alegreya Sans';
           	padding: 2px 26px 2px 90px;
           	margin-top: 0;
           	background-color: #ffffff;
@@ -24,7 +24,7 @@ h1 {
   .content h1 {
 
           	font-size: 50px;
-          	font-family: 'Flamenco';
+          	font-family: 'Alegreya Sans';
           	padding: 2px 26px 2px 90px;
           	margin-top: 0;
           	background-color: #ffffff;
@@ -35,8 +35,8 @@ h1 {
           }
           
 nav {
-	float:right;
-      margin: -50px 100px ;
+  	   float:right;
+      margin: -72px 100px;
       padding: 10px;
     	text-align: center;
     	background-color: #ffffff;
@@ -51,13 +51,14 @@ ul {
 	padding: 0px;
 	list-style: none;
 }
+
 li {
 	display: inline;
 }
 a {
 	padding: 30px 30px 30px 7px;
 	text-decoration: none;
-		font-family: 'Flamenco'; 
+		font-family: 'Alegreya Sans'; 
 
 	color: #000000; 
 }
@@ -65,65 +66,76 @@ a:hover{
 	text-decoration: none;
 }
 
-         
-          #komcie {
-                      width: 44%;
+
+#komcie {
+            width: 44%;
 margin-right: auto;
 margin-left: auto;
-          font-size: 11px;
-          text-align: center;
-          height: auto;
-          }
-          
-          
-         .form-control {
+font-size: 11px;
+text-align: center;
+height: auto;
+}
 
-          text-align: center;
-          height: auto;
+form {
+  margin-top: 30px;
+}
 
-         }
+.form-control {
+
+text-align: center;
+height: auto;
+
+}
 
 h2 {
-color: white;
-padding: 20px;
-background-color: rgb(65, 101, 105);
+color: #141313;
+padding: 40px;
+background-color: rgba(65, 101, 105, 0.11);
 
 font-size: 40px;
-font-family: 'Flamenco';
+font-family: 'Alegreya Sans';
 text-align: center;         
 
-box-shadow: 0px 3px 3px rgba(0,0,0,0.2);
+/*box-shadow: 0px 3px 3px rgba(0,0,0,0.2);
           -moz-box-shadow: 0px 3px 3px rgba(0,0,0,0.2);
-          -webkit-box-shadow: 0px 3px 3px rgba(0,0,0,0.2);
+          -webkit-box-shadow: 0px 3px 3px rgba(0,0,0,0.2);*/
 }
 
-         input {
-          width: 50%;
-         }
+input {
+width: 50%;
+}
 
-         .form-group {
-          margin-right: auto;
-          margin-left: auto;
-          width: 50%;
-         }
+.form-group {
+margin-right: auto;
+margin-left: auto;
+width: 50%;
+}
 
 .content {
-  padding: 10px 0px 100px 0px;
+  padding: 40px 0px 100px 0px;
      height: auto;  
 	background-color: #ffffff;
-	-moz-box-shadow: 0px 3px 3px rgba(0,0,0,0.2);
--webkit-box-shadow: 0px 3px 3px rgba(0,0,0,0.2);
+	/*-moz-box-shadow: 0px 3px 3px rgba(0,0,0,0.2);
+-webkit-box-shadow: 0px 3px 3px rgba(0,0,0,0.2);*/
 }
 .content li {
-  display: inline;
+  /*background: red;*/
+  /*display: inline;*/
+  position: relative;
+  top: 30px;
 }
          
 .content #tyt{
+color: rgb(17, 12, 12);
+position: relative;
+right: 50px;
 
 color: black;
 font-size: 40px;
 }
+
 .content li a {
+padding-top: 0px;
 font-size: 15px;
 color: green;
 
@@ -141,10 +153,50 @@ font-size: 10px;
   font-size: 20px;
 }
 
-#koment {
+#koment li {
   background-color: rgb(223, 223, 223);
+  width: 100%;
 }
 
 .btn-group {
   margin-left: 46%;
+}
+
+.btn-warning {
+  text-align: center;
+}
+
+#tyt {
+  color: rgb(17, 12, 12);
+}
+
+#tresc {
+  padding: 40px;
+}
+
+.list-group-item {
+  margin-right: auto;
+margin-left: auto;
+width: 50%;
+}
+
+.sel {
+  padding: 0px;
+  margin-top: 0px;
+  display: inline;
+}
+
+th {
+  text-align: center;
+}
+
+.label {
+  font-size: 15px;
+  position: relative;
+  top: 8px;
+}
+
+.label a {
+  padding: 0;
+  color: #fff;
 }
