--- a/views/layout.haml
+++ b/views/layout.haml
@@ -2,7 +2,7 @@
   %head
     %title Strona główna
     %link{:href => "/bootstrap/css/bootstrap.css", :media => "screen", :rel => "StyleSheet", :type => "text/css"}
-    %link{:href => "http://fonts.googleapis.com/css?family=Flamenco", :rel => "stylesheet", :type => "text/css"}
+    %link{:href => "http://fonts.googleapis.com/css?family=Alegreya+Sans", :rel => "stylesheet", :type => "text/css"}
     %link{:href => "/style/stajl.css", :media => "screen", :rel => "StyleSheet", :type => "text/css"}
     %script{:src => "bootstrap/js/jquery.min.js", :type => "text/javascript"}
     %script{:src => "bootstrap/js/bootstrap.js", :type => "text/javascript"}
@@ -13,20 +13,21 @@
   %body
     .wrapper
       %h1
-        %a{:href => "/"} Blog
+        %a{:href => "/",   :id => "tyt"} Blog
       %nav
-        %ul
-          %li
-            %span.glyphicon.glyphicon-user
+        .nav
+          %ul.nav.nav-pills
+            %li
               %a{:href => "/o-mnie"} O mnie
-          %li
-            %span.glyphicon.glyphicon-th
-              %a{:href => "/formularz"} Oblicz
-          %li
-            %span.glyphicon.glyphicon-plus
-              %a{:href => "/nowy_post"} Nowy Post
-          %li
-            %span.glyphicon.glyphicon-list-alt
-              %a{:href => "/lista_postow"} Lista Postów
+            %li
+              %a{:href => "/posts/new"} Nowy Post
+            %li
+              %a{:href => "/posts"} Lista Postów
+            %li
+              %a{:href => "/posts/public"} Lista Postów Publiczna
+            %li
+              %a{:href=>"/categories"} Kategorie
+              
     .content
+      .errors
       = yield
