--- a/views/layout.haml
+++ b/views/layout.haml
@@ -24,7 +24,7 @@
             %li
               %a{:href => "/posts"} Lista Postów
             %li
-              %a{:href => "/posts/public"} Lista Postów Publiczna
+              %a{:href => "/"} Lista Postów Publiczna
             %li
               %a{:href=>"/categories"} Kategorie
               
